# gto_meta

./: .gitmodules
gto/: CMakeLists.txt  package.xml
gto/camera_info/: camerav2_1280x960.yaml  camerav2_352x240.yaml
gto/cfg/: gto.cfg
gto/include/gto/: ground_texture_odometry.h
gto/launch/: camerav2_720x480_30fps.launch  gto.launch  raspicam.launch  raspicam_352x240_30fps.launch  raspicam_gto.launch  realsense.launch  realsense_gto.launch  realsense_gto_color.launch  realsense_gto_infra.launch
gto/src/: ground_texture_odometry.cpp  ground_texture_odometry_node.cpp
gto_meta/: CMakeLists.txt  package.xml
viso/: CMakeLists.txt  package.xml
viso/cfg/: viso.cfg
viso/include/viso/: visual_odometry.h
viso/launch/: realsense.launch  realsense_viso.launch
viso/src/: visual_odometry.cpp  visual_odometry_node.cpp
