<?xml version="1.0"?>
<package>
  <name>gto_meta</name>
  <version>0.0.0</version>
  <description>AMR </description>
  <maintainer email="volkan.k@milvusrobotics.com">gmail </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gto</run_depend>
  <run_depend>raspicam_node</run_depend>
  <run_depend>image_common</run_depend>
  <run_depend>image_trasnport_plugins</run_depend>

  <export>
    <metapackage/>
  </export>
</package>